my-first-contributuion

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>git test</title>
+	<title>My Practice Project</title>
 </head>
 <body>
-<h1>yohooooooooooo</h1>
+<h1>This is my first practice</h1>
 </body>
 </html>
