--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>My Practice Project</title>
-</head>
+<html lang="eng">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>home page</title> 
+        <link rel="icon" href="./images/favicon-32x32.png">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" >
+    </head>
 <body>
-<h1>This is my first practice</h1>
+  <div>
+	  <h1>Believe in Yourself</h1>
+  </div>
+    
 </body>
 </html>
