--- a/site/index.html
+++ b/site/index.html
@@ -5,12 +5,13 @@
         <meta name="description" content="">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>home page</title> 
+        <title>Believe in Yourself</title> 
         <link rel="icon" href="./images/favicon-32x32.png">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" >
+		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet" >
+		<link href="./app.css" rel="stylesheet">
     </head>
 <body>
-  <div>
+  <div class="container">
 	  <h1>Believe in Yourself</h1>
   </div>
     
