--- a/site/index.html
+++ b/site/index.html
@@ -12,8 +12,13 @@
     </head>
 <body>
   <div class="container">
-	  <h1>Believe in Yourself</h1>
+	  <h1>"Strive not to be a success, but </h1>
+		  <h1>rather to be of value" </h1>
+	  <span>
+		  -Albert Einstein
+	  </span>
   </div>
     
 </body>
 </html>
+
